--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-01-02
+% \update      2016-01-03
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -62,7 +62,7 @@
    However, the final version of the "events" branch has not yet been merged
    into the "master" branch, and so this document is a little ahead of the
    master branch at this time.  Grab the "events" branch to get the latest
-   code!
+   code, which still has some event-editor bugs!
 
 \subsection{Sequencer64: What?}
 \label{subsec:what_is_sequencer64}
