--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-27
+% \update      2016-01-09
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -135,7 +135,7 @@
    as vendor-specific information, and marking this section as a regular
    MIDI track.
    The legacy and new formats of the final "track" are explained in
-   \sectionref{subsec:legacy_proprietary_track_format}.
+   \sectionref{subsec:legacy_midi_format}.
 
 \subsubsection{Menu / File / Import}
 \label{subsubsec:seq64_menu_file_import}
