--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-01-09
+% \update      2016-01-18
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -689,8 +689,11 @@
    \begin{itemize}
       \item \textbf{Jack Transport}.
          \index{JACK!transport}
-         Enables synchronization with JACK Transport.
+         Enables slave synchronization with JACK Transport.
          The command-line option is \texttt{--jack\_transport}.
+         The behavior of this mode of operation is perhaps not quite
+         correct.  Even as a slave, \textsl{Sequencer64} can start and
+         stop playback.
       \item \textbf{Transport Master}.
          \index{JACK!transport master}
          \textsl{Sequencer64} will attempt to serve as the JACK Master.
@@ -702,8 +705,22 @@
          The command-line option is \texttt{--jack\_master\_cond}.
    \end{itemize}
 
+   Note that there are long-standing issues with the JACK support of
+   \textsl{Seq24}, and \textsl{Sequencer64} currently inherits some of them,
+   in spite of some bug fixes.  Generally, if one experiences issues in
+   transport control, try making one of the other sequencer applications the
+   JACK Master.
+
+   Also be aware that, if one starts \textsl{Sequencer64} without JACK running,
+   it will take a little while for \textsl{Sequencer64} to start up.
+
+   Finally, if one makes a change in the JACK settings, it is best to
+   then press the \textbf{Disconnect} button, then the \textbf{Connect}
+   button.  Another option is to restart \textsl{Sequencer64}... the settings
+   are automatically saved when \textsl{Sequencer64} exits.
+
    \itempar{JACK Start mode}{jack sync!start mode}
-   This items collects the following settings, also stored in the "rc" file
+   This item collects the following settings, also stored in the "rc" file
    settings group \texttt{[jack-transport]}.
 
    \begin{itemize}
@@ -724,14 +741,18 @@
          The command-line option is \texttt{--jack\_start\_mode 1}.
    \end{itemize}
 
-   Note that, in ALSA mode, \textsl{Sequencer64} selects the following modes
-   according to which window started the playback.  The main window, or pattern
+   Note that, in ALSA mode (non-JACK mode), \textsl{Sequencer64} 
+   currently \textsl{does not} select the playback modes
+   according to which window started the playback.
+   It selects them according to the chosen live/song mode as discussed above.
+   Do we want to re-enabled this functionality for ALSA mode?:
+   
+   \textsl{The main window, or pattern
    window, causes playback to be in live mode.  The user can arm and mute
    patterns in that windows, by clicking on sequences, using their hot-keys,
    and by using the group-mode and learn-mode features (I think!).
-
    The song editor causes playback to be in performance mode, also known as
-   playback mode.
+   playback mode.}
 
    (It remains to be determined if this feature also holds in JACK 
    mode; it shouldn't. One would think that the JACK Start mode
