--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-01-03
+% \update      2016-01-18
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -37,7 +37,7 @@
 
 \begin{figure}[H]
    \centering 
-   \includegraphics[scale=0.80]{Sequencer64-0_9_9_10-b.png}
+   \includegraphics[scale=0.70]{Sequencer64-0_9_9_12.png}
 \end{figure}
 
 \clearpage                             % moves Contents to next page
@@ -58,11 +58,15 @@
 
    This document describes how to use \textsl{Sequencer64}
    \cite{sequencer64},
-   through version 0.9.9.12, dated approximately through early January, 2016.
-   However, the final version of the "events" branch has not yet been merged
-   into the "master" branch, and so this document is a little ahead of the
-   master branch at this time.  Grab the "events" branch to get the latest
-   code, which still has some event-editor bugs!
+   through version 0.9.9.13, dated approximately through middle January, 2016.
+   The biggest new work has been getting the JACK support to work properly,
+   in the "fixups" branch, now merged into "master".
+
+   We thought we had broken JACK support in our refactoring of the program, but
+   it turns out there was a long-standing bug in \textsl{Seq24}, where the JACK
+   position structure was not being initialized.  But the position values were
+   good enough on most computers to allow the JACK support to set itself up and
+   run.  Anyway, this bug had us hustling for quite a few days.
 
 \subsection{Sequencer64: What?}
 \label{subsec:what_is_sequencer64}
