Added documentation for version 0.9.9.15, pending release.

--- a/tex/seq64_build.tex
+++ b/tex/seq64_build.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-06
-% \update      2015-11-14
+% \update      2016-01-18
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -299,7 +299,7 @@
 \begin{figure}[H]
    \centering 
    \includegraphics[scale=0.75]{song-editor/song-editor-alternate-look.png}
-   \caption{/Sequence Pattern Editor Alternate Look}
+   \caption{Song Editor Alternate Look}
    \label{fig:seq64_song_editor_alternate_look}
 \end{figure}
 
