--- a/tex/seq64_midi_formats.tex
+++ b/tex/seq64_midi_formats.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-09-03
-% \update      2015-11-27
+% \update      2016-01-18
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -154,7 +154,7 @@
    (\textsl{SeqSpec}) section.  It starts with
 
    \begin{verbatim}
-      0x24240010 == a Seq24 c\_midictrl proprietary value
+      0x24240010 == a Seq24 c_midictrl proprietary value
    \end{verbatim}
 
    Getting this value first is simplified MIDI in two ways.
