--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-01-28
+% \update      2016-02-07
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -153,7 +153,10 @@
       using it.  So, I released it under the GPL.
    \end{quotation}
 
-   This project deserves to stay alive!  Taking advantage of Rob's generosity,
+   This project deserves to stay alive!
+   (And it is alive!  A new version, 0.9.3, has come out from the LaunchPad
+   group!  It corrects a problem with MIDI Clock drift).
+   Taking advantage of Rob's generosity,
    we've created a continuation, a refactoring, and an improvement (we hope) of
    \textsl{Seq24}.  It preserves, we hope, the lean nature of \textsl{Seq24},
    while adding a few features we've found useful, making it the "vi of
